fix recommendation wrap issue

--- a/visualizer/style.css
+++ b/visualizer/style.css
@@ -241,7 +241,9 @@ html.light-theme #toggle-theme {
 #recommendation .details {
   display: none;
   padding: 0 37px;
+  margin: 0 auto;
   max-height: calc(100% - 65px);
+  max-width: 1000px;
   box-sizing: border-box;
   background-color: var(--recommend-bg-color);
   color: var(--recommendbar-text-color);
